docs/0.14/_sources/api/gammapy.modeling.models.LogParabolaSpectralModel.rst.txt
LogParabolaSpectralModel
========================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LogParabolaSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LogParabolaSpectralModel.alpha
      ~LogParabolaSpectralModel.amplitude
      ~LogParabolaSpectralModel.beta
      ~LogParabolaSpectralModel.e_peak
      ~LogParabolaSpectralModel.parameters
      ~LogParabolaSpectralModel.reference
      ~LogParabolaSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~LogParabolaSpectralModel.__call__
      ~LogParabolaSpectralModel.copy
      ~LogParabolaSpectralModel.create
      ~LogParabolaSpectralModel.energy_flux
      ~LogParabolaSpectralModel.energy_flux_error
      ~LogParabolaSpectralModel.evaluate
      ~LogParabolaSpectralModel.evaluate_error
      ~LogParabolaSpectralModel.from_dict
      ~LogParabolaSpectralModel.from_log10
      ~LogParabolaSpectralModel.integral
      ~LogParabolaSpectralModel.integral_error
      ~LogParabolaSpectralModel.inverse
      ~LogParabolaSpectralModel.plot
      ~LogParabolaSpectralModel.plot_error
      ~LogParabolaSpectralModel.spectral_index
      ~LogParabolaSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: amplitude
   .. autoattribute:: beta
   .. autoattribute:: e_peak
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_log10
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
