docs/0.18/_sources/api/gammapy.modeling.models.LogParabolaSpectralModel.rst.txt
LogParabolaSpectralModel
========================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: LogParabolaSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~LogParabolaSpectralModel.alpha
      ~LogParabolaSpectralModel.amplitude
      ~LogParabolaSpectralModel.beta
      ~LogParabolaSpectralModel.covariance
      ~LogParabolaSpectralModel.default_parameters
      ~LogParabolaSpectralModel.e_peak
      ~LogParabolaSpectralModel.is_norm_spectral_model
      ~LogParabolaSpectralModel.parameters
      ~LogParabolaSpectralModel.reference
      ~LogParabolaSpectralModel.tag
      ~LogParabolaSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~LogParabolaSpectralModel.__call__
      ~LogParabolaSpectralModel.copy
      ~LogParabolaSpectralModel.create
      ~LogParabolaSpectralModel.energy_flux
      ~LogParabolaSpectralModel.energy_flux_error
      ~LogParabolaSpectralModel.evaluate
      ~LogParabolaSpectralModel.evaluate_error
      ~LogParabolaSpectralModel.from_dict
      ~LogParabolaSpectralModel.from_log10
      ~LogParabolaSpectralModel.from_parameters
      ~LogParabolaSpectralModel.integral
      ~LogParabolaSpectralModel.integral_error
      ~LogParabolaSpectralModel.inverse
      ~LogParabolaSpectralModel.plot
      ~LogParabolaSpectralModel.plot_error
      ~LogParabolaSpectralModel.spectral_index
      ~LogParabolaSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: amplitude
   .. autoattribute:: beta
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e_peak
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_log10
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
